--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2025.8.3
 cloudinary==1.44.1
 Django==5.2.6
 djangorestframework==3.16.1
+pillow==11.3.0
 psycopg2==2.9.10
 python-decouple==3.8
 six==1.17.0
