--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 asgiref==3.9.2
 certifi==2025.8.3
+charset-normalizer==3.4.3
 cloudinary==1.44.1
 Django==5.2.6
+django-cloudinary-storage==0.3.0
 djangorestframework==3.16.1
+idna==3.10
 pillow==11.3.0
 psycopg2==2.9.10
 python-decouple==3.8
+requests==2.32.5
 six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
